# INCEPT.sh

./: .gitignore  AGENT_INSTRUCTIONS.md  ARCHITECTURE_V2.md  CHANGELOG.md  Dockerfile  INCEPT_V2_BLUEPRINT.md  PIPELINE_PLAN.md  PRODUCTION_PLAN.md  README.md  install.sh  pyproject.toml  requirements_backup.txt  test_100_results.json
commands/: 001_find.md  002_locate.md  003_wc.md  004_sort.md  005_uniq.md  006_cut.md  007_hexdump.md  008_strings.md  009_lsattr.md  010_chattr.md  011_nano.md  012_vi.md  013_vim.md  014_id.md  015_whoami.md  016_lscpu.md  017_lshw.md  018_lsusb.md  019_dmidecode.md  020_top.md  021_htop.md  022_kill.md  023_pkill.md  024_nohup.md  025_disown.md  026_bg.md  027_fg.md  028_jobs.md  029_scp.md  030_sftp.md  031_ifconfig.md  032_ss.md  033_netstat.md  034_tracepath.md  035_mtr.md  036_nmap.md  037_chmod.md  038_umask.md  039_getent.md  040_lsmod.md  (+545 more)
configs/: training_command.yaml  training_dpo.yaml  training_dpo_command.yaml  training_intent.yaml  training_slot.yaml  training_unified.yaml
data/training/: command_stats.json
data/v2/: dpo_command_pairs.jsonl  stats.json  targeted_examples.jsonl  test.jsonl  val.jsonl
data/v2/dpo/: dpo_pairs.jsonl
data/v2/targeted_fixes/: all_targeted_fixes.jsonl  identity.jsonl  macos_fix.jsonl  missing.jsonl  narrative.jsonl  wrong.jsonl  wrong_cmd.jsonl
docs/: architecture.md  troubleshooting.md
incept/cli/: banner.py  commands.py  completer.py  config.py  main.py  repl.py
incept/compiler/: expanded_ops.py
incept/core/: context.py  direct_pipeline.py  engine.py  model_classifier.py  model_loader.py  pipeline.py
incept/data/: command_generator.py  v2_commands.py  v2_commands_extended.py  v2_pipeline_templates.py
incept/knowledge/: __init__.py  extended_pools.py  store.py  vectorizer.py
incept/recovery/: engine.py
incept/retrieval/: distro_maps.py
incept/server/: app.py  state.py
incept/server/routes/: command.py
incept/session/: store.py
incept/training/: config.py  export.py  sft_trainer.py
scripts/: auto_train_pipeline.py  build_knowledge_index.py  download_external_data.py  fix_original_data.py  generate_all_commands.py  generate_command_data.py  generate_command_prompts.py  generate_targeted_data.py  generate_targeted_fixes.py  generate_v2_data.py  linux_commads_datasets.json  linux_commads_datasets_original.json  qwen35b_cyber_defender_prompt.md  qwen35b_data_generation_prompt.md  test_100_questions.py  train_dpo.py  train_surgical.py  train_v2.py
tests/: conftest.py  test_cli_actions.py  test_cli_explain.py  test_cli_repl.py  test_compilers_expanded.py  test_compilers_macos.py  test_compilers_system.py  test_context_script.py  test_distro_maps.py  test_export.py  test_pipeline_integration.py  test_schemas.py  test_server_command.py  test_server_explain.py  test_server_health.py  test_sft_trainer.py  test_shell_plugin.py  test_training_config.py  test_validator.py
